2009-12-01  Ethan A Merritt  <merritt@u.washington.edu>

	* config/makefile.cyg config/makefile.dj2 config/makefile.mgw
	config/makefile.os2 src/Makefile.am term/lua.trm term/Makefile.am.in:
	Install gnuplot-tikz.lua under $pkgdatadir rather than under
	$pkglibexecdir.
	Fixes build problems under cygwin and mingw.
	Thanks to Tatsuro Matsuoka.

2009-11-30  Shigeharu Takeno  <shige-takeno@users.sourceforge.net>

	* docs/gnuplot-ja.doc docs/term-ja.diff:
	Sync Japanese documentation to gnuplot.doc 1.568.2.19

	* term/gd.trm: Replace two missing lines

2009-11-28  Ethan A Merritt  <merritt@u.washington.edu>

	4.4.0-rc1

2009-11-25  Petr Mikulik  <mikulik@physics.muni.cz>

	* src/win/winmain.c (MyFPrintF MyVFPrintF MyPrintF): Workaround for
	vsnprintf(NULL,0,...) returning zero (MingW 3.4).

2009-11-21  Ethan A Merritt  <merritt@u.washington.edu>

	* Update version info for upcoming release of 4.4.rc1

	* demo/Makefile.am.in demo/bldg.png: Ensure that this demo image
	is included in the distribution tarball.

2009-11-16  Petr Mikulik  <mikulik@physics.muni.cz>

	* docs/gnuplot.doc: Fix support web page URL.

	* src/show.c (show_version): Less info help lines.

2009-11-12  Thomas Sefzick <thse@users.sourceforge.net>

	* term/canvas.trm:  Fix initialization failure on non-unix platforms.

2009-11-11  Petr Mikulik  <mikulik@physics.muni.cz>

	* docs/gnuplot.doc: Updated introduction.

2009-11-06  Allin Cottrell  <cottrell@wfu.edu>

	* src/wxterminal/gp_cairo.c (gp_cairo_convert):  Work around a font
	problem in the win32 backend for pango/cairo character rendering.
	Conditional on WIN32 and libpango > 1.21, request rendering by freetype
	rather than win32. Fix suggested by cairo developer Behdad Esfahbod.

2009-11-04  Petr Mikulik  <mikulik@physics.muni.cz>

	* docs/gnuplot.doc: ticslevel => xyplane.

	* src/color.c (make_palette) src/graphics.c (plot_image_or_update_axes):
	Remove useless warning messages.
